--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -2,6 +2,10 @@
   <head>
     <script type="module" src="https://unpkg.com/admindo"></script>
     <script type="module" src="https://unpkg.com/admindo-plugin-about"></script>
+    <script type="module" src="https://unpkg.com/admindo-plugin-dofs-browser"></script>
+    <script type="module" src="https://unpkg.com/admindo-plugin-dterm"></script>
+    <script type="module" src="https://unpkg.com/admindo-plugin-dorm"></script>
+    <script type="module" src="https://unpkg.com/admindo-plugin-better-auth"></script>
   </head>
   <body>
     <admin-do />
