--- a/examples/durable-object/index.html
+++ b/examples/durable-object/index.html
@@ -9,6 +9,10 @@
     <script type="module">
       import 'admindo/vanilla'
       import 'admindo-plugin-about'
+      import 'admindo-plugin-dterm'
+      import 'admindo-plugin-better-auth'
+      import 'admindo-plugin-dorm'
+      import 'admindo-plugin-dofs-browser'
     </script>
   </body>
 </html>
